--- a/src/Ecs/AgentManagerBundle/Resources/views/Position/show.html.twig
+++ b/src/Ecs/AgentManagerBundle/Resources/views/Position/show.html.twig
@@ -1,3 +1,18 @@
+{% extends '::base.html.twig' %}
+
+{% block title %}Emmediate Credit Solutions{% endblock %}
+
+{% block styles %}
+    {{ parent() }}
+{% endblock %}
+
+{% block scripts %}
+
+{% endblock %}
+
+{% block content %}
+
+
 <h1>Position</h1>
 
 <table class="record_properties">
@@ -35,3 +50,4 @@
         </form>
     </li>
 </ul>
+{% endblock %}
