After I don't know what...

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -152,7 +152,7 @@
                 <li class="i_users_2"><a href="{{ url('customer') }} "><span>CRM</span></a></li>
                 <li class="i_admin_user"><a href="#"><span>Agents</span></a>
                 	<ul>
-                		<li class="i_user"><a href="{{ url('agentmanager_empositions') }}"><span>Agent Positions</span></a></li>
+                		<li class="i_user"><a href="#"><span>Job Titles</span></a></li>
                 		<li>&nbsp;</li>
                 	</ul>
                 </li>
